syntax = "proto3";

package zrchain.identity;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "zrchain/identity/params.proto";
import "zrchain/identity/keyring.proto";
import "zrchain/identity/workspace.proto";

option go_package = "github.com/Zenrock-Foundation/zrchain/v6/x/identity/types";

// GenesisState defines the identity module's genesis state.
message GenesisState {

  // params defines all the parameters of the module.
  Params params = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
  string port_id = 2;
  repeated Keyring keyrings = 3 [ (gogoproto.nullable) = false ];
  repeated Workspace workspaces = 4 [ (gogoproto.nullable) = false ];
}
